@@ -1,3 +1,8 @@
+2005-05-09:
+	* src/minikafs.c: add a wrapper for the ws_cell pioctl.
+	* src/tokens.c,src/afs5log.c: use ws_cell to find the default cell
+	instead of guessing by doing a cell_of_file on /afs
+
 2005-04-27:
 	* src/minikafs.c: also try afs@DEFAULTREALM if the default realm is
 	not the same as the derived realm (sort of from Christopher Allen Wing).
